ECA-702: add -Djava.endorsed.dirs=lib to jaxws junit test and cli to workaround change to jax-ws 2.1 in jdk 1.6u4 and later
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@5738 37aeb1de-b14b-0410-9a0e-82b28170d228