@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -cp ejbcawscli.jar org.ejbca.core.protocol.ws.client.cvcwscli "$@"
+java -Djava.endorsed.dirs=lib -cp ejbcawscli.jar org.ejbca.core.protocol.ws.client.cvcwscli "$@"
